--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+  - ./lib/images/homeBG.jpg
   #   assets:
   #     - images/homeBG.jpg
   #   - images/homeBG.jpg
